# pyETHbook

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/ethbook/: app.py  binance.py  coinbase.py  colours.py  combined_book.py  constants.py  ftx.py  kraken.py  limit_level.py  order_book.py  pseudo.txt  table.py  tempCodeRunnerFile.py
src/ethbook/exchanges/: __init__.py  binance.py  coinbase.py  ftx.py  kraken.py  order_book.py
tests/: test_container.py
