[metadata]
name = pyETHbook
description = A combined orderbook cli
author = goodalexhunting, prestance1 
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32, win64
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    ethbook
install_requires =
    websocket-client>=1.4
python_requires = >=3.6
package_dir =
    =src
zip_safe = no



[options.package_data]
slapping = py.typed